# generated/python/resources/span/__init__.py
@@ -1,5 +1,5 @@
 # This file was auto-generated by Fern from our API Definition.
 
-from .types import CreateSpanRequest, Span, UpdateSpanRequest
+from .types import CreateLLMSpanRequest, CreateSpanRequest, LLMAttributes, LLMTokens, Span, UpdateSpanRequest
 
-__all__ = ["CreateSpanRequest", "Span", "UpdateSpanRequest"]
+__all__ = ["CreateLLMSpanRequest", "CreateSpanRequest", "LLMAttributes", "LLMTokens", "Span", "UpdateSpanRequest"]
