# generated/python/resources/span/types/__init__.py
@@ -1,7 +1,10 @@
 # This file was auto-generated by Fern from our API Definition.
 
+from .create_llm_span_request import CreateLLMSpanRequest
 from .create_span_request import CreateSpanRequest
+from .llm_attributes import LLMAttributes
+from .llm_tokens import LLMTokens
 from .span import Span
 from .update_span_request import UpdateSpanRequest
 
-__all__ = ["CreateSpanRequest", "Span", "UpdateSpanRequest"]
+__all__ = ["CreateLLMSpanRequest", "CreateSpanRequest", "LLMAttributes", "LLMTokens", "Span", "UpdateSpanRequest"]
