# generated/python/resources/span/types/llm_attributes.py
@@ -6,12 +6,14 @@ import typing
 import pydantic
 
 from ....core.datetime_utils import serialize_datetime
+from .llm_tokens import LLMTokens
 
 
-class UpdateTraceRequest(pydantic.BaseModel):
-    id: str
-    status: str
-    status_message: typing.Optional[str] = pydantic.Field(alias="statusMessage")
+class LLMAttributes(pydantic.BaseModel):
+    model: typing.Any
+    prompt: typing.Optional[str]
+    completion: typing.Optional[str]
+    tokens: LLMTokens
 
     def json(self, **kwargs: typing.Any) -> str:
         kwargs_with_defaults: typing.Any = {"by_alias": True, "exclude_unset": True, **kwargs}
@@ -23,5 +25,4 @@ class UpdateTraceRequest(pydantic.BaseModel):
 
     class Config:
         frozen = True
-        allow_population_by_field_name = True
         json_encoders = {dt.datetime: serialize_datetime}
