# generated/python/resources/span/types/llm_tokens.py
@@ -8,10 +8,9 @@ import pydantic
 from ....core.datetime_utils import serialize_datetime
 
 
-class UpdateTraceRequest(pydantic.BaseModel):
-    id: str
-    status: str
-    status_message: typing.Optional[str] = pydantic.Field(alias="statusMessage")
+class LLMTokens(pydantic.BaseModel):
+    prompt_amount: typing.Optional[int]
+    completion_amount: typing.Optional[int]
 
     def json(self, **kwargs: typing.Any) -> str:
         kwargs_with_defaults: typing.Any = {"by_alias": True, "exclude_unset": True, **kwargs}
@@ -23,5 +22,4 @@ class UpdateTraceRequest(pydantic.BaseModel):
 
     class Config:
         frozen = True
-        allow_population_by_field_name = True
         json_encoders = {dt.datetime: serialize_datetime}
